fixed flickering and desc. hover blocking elements below.

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -253,6 +253,15 @@
 				&.showAbilities {
 					background-color: hsla(33, 100%, 53%, 1);
 				}
+
+				&.showCyphers {
+					background-color: #01FDF6;
+					color: black;
+				}
+
+				&.showArtifacts {
+					background-color: #8962d8;
+				}
 			}
 		}
 
@@ -267,6 +276,28 @@
 		// .showAbilities {
 		// 	background-color: hsla(33, 100%, 53%, 1);
 		// }
+	}
+
+	.instructions {
+		background-color: rgba(44, 46, 47, 0.452);
+		flex: 0;
+		font-weight: bold;
+		padding: 0.5rem 1rem;
+		border-radius: 5px;
+
+
+		span:nth-of-type(1) {
+			color: rgb(60, 177, 255);
+		}
+
+		span:nth-of-type(2) {
+			color: rgb(255, 123, 0);
+		}
+
+		span:nth-of-type(3) {
+			color: rgb(251, 90, 184);
+		}
+
 	}
 
 	.combatAction {
@@ -292,12 +323,32 @@
 			height: 0;
 		}
 
+
 		.pinnedDiv {
 			display: flex;
+
+			.hud-item {
+				background-color: #09F;
+				color: black;
+
+				&__description {
+					color: white;
+				}
+
+				.hud-item__damage {
+					color: #ffbdad !important;
+				}
+
+				&:hover {
+					background: #6589a5;
+					cursor: pointer;
+				}
+			}
 		}
 
 		.hud-item {
 			flex: 0 0 auto;
+			box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 			position: relative;
 			height: max-content;
 
@@ -312,6 +363,7 @@
 
 				.hud-item__description {
 					color: white;
+					pointer-events: none;
 				}
 
 				.hud-item__damage {
@@ -337,6 +389,7 @@
 			}
 
 			&__description {
+				pointer-events: none;
 				position: absolute;
 				background-color: rgba(66, 78, 87, 0.9);
 				border: 2px solid white;
